[gd_scene load_steps=5 format=3 uid="uid://qjkylax5spu3"]

[ext_resource type="Script" path="res://scene/world.gd" id="1_4eabr"]
[ext_resource type="PackedScene" uid="uid://cl61jxa6ccyuh" path="res://scene/terrain.tscn" id="2_5fmie"]
[ext_resource type="Script" path="res://components/GameState.gd" id="3_4kxfv"]
[ext_resource type="Script" path="res://components/TurnManager.gd" id="4_8kbl4"]

[node name="World" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_4eabr")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="Camera2D"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 0
offset_left = 120.0
offset_top = -317.0
offset_right = 320.0
offset_bottom = -77.0

[node name="Panel" type="Panel" parent="Camera2D/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="Camera2D/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "something
sdasdas

dasdasda
sdada"
editable = false
drag_and_drop_selection_enabled = false
scroll_past_end_of_file = true

[node name="Terrain" parent="." instance=ExtResource("2_5fmie")]

[node name="GameState" type="Node" parent="."]
script = ExtResource("3_4kxfv")

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("4_8kbl4")

[node name="Players" type="Node2D" parent="."]
modulate = Color(0, 1, 0, 1)
y_sort_enabled = true

[node name="Enemies" type="Node2D" parent="."]
modulate = Color(1, 0, 0, 1)
y_sort_enabled = true

[connection signal="newTurn" from="GameState" to="TurnManager" method="_on_game_state_new_turn"]
